--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,90 @@
-#myCanvas{
-  /* background: #000; */
+* {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+.App {
+  height: 100vh;
+  width: 100vw;
+  background: #a02c80;
+}
+.main {
+  height: 100vh;
+  width: 70vw;
 
+  margin: 0 auto;
+  background: #ff00b7;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem 1rem;
+}
+.canvas-meta {
+  display: flex;
+  gap: 0 1rem;
+  
+}
+.meta-data {
+  border: 2px solid white;
+  height: min-content;
+  padding: 2rem 0.5rem;
+  align-self: center;
+  color: white;
+  min-width: 15rem;
+  border-radius: 6px ;
+}
+.meta-data>h2 {
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-decoration: underline;
+}
+.meta-data>p {
+  text-align: center;
+  margin-top: 0.5rem;
+}
+.input-file {
+  padding: 8px 20px;
+  color: black;
+  background-color: #b7f564;
+  border-radius: 6px;
+}
+
+#myCanvas {
+  background: hsl(0, 0%, 2%);
+  border-radius: 6px; 
+}
+
+.waveform {
+}
+
+.btn {
+}
+
+.input-file {
+  display: none; /* Hide the input element */
+}
+
+.custom-upload-button {
+  background-color: #b7f564;
+  color: black;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 6px  ;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.custom-upload-button:hover {
+  background-color: #a3f03f;
+}
+
+
+@media screen and (max-width: 1000px) { 
+  .canvas-meta {
+    flex-direction: column;
+    gap: 2rem 1rem;
+    
+  }
+  
 }
